[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dev-dependencies]
futures = "0.3.0"
gain = { path = "../gain" }
gain-lep = { path = "../gain-lep" }
gain-localhost = { path = "../gain-localhost", features = ["lep"] }
lep = "*"

[[example]]
name = "hello"
path = "hello.rs"

[[example]]
name = "lep"
path = "lep.rs"

[[example]]
name = "localhost"
path = "localhost.rs"

[[example]]
name = "peer"
path = "peer.rs"
