[package]
name = "gain-lep"
version = "0.1.1"
authors = ["Timo Savola <timo.savola@iki.fi>"]
edition = "2018"
description = "Support for exposing Gain APIs via Lep."
documentation = "https://docs.rs/gain-lep"
homepage = "https://gate.computer"
repository = "https://github.com/gate-computer/gain"
keywords = ["await", "framework", "futures", "gate", "lisp"]
categories = ["api-bindings", "asynchronous"]
license = "BSD-3-Clause"

[dependencies]
gain = { version = ">=0.3.0, <1", path = "../gain" }
lep = "0.4.4"
