[package]
name = "gain-lep"
version = "0.1.3"
authors = ["Timo Savola <timo.savola@iki.fi>"]
edition = "2021"
description = "Support for exposing Gain APIs via Lep."
documentation = "https://docs.rs/gain-lep"
homepage = "https://gate.computer"
repository = "https://github.com/gate-computer/gain"
keywords = ["await", "framework", "futures", "gate", "lisp"]
categories = ["api-bindings", "asynchronous"]
license = "MIT"

[dependencies]
gain = { version = ">=0.4.0, <1", path = "../gain" }
lep = "0.4.5"
