[package]
name = "gain-shell"
version = "0.1.0"
authors = ["Timo Savola <timo.savola@iki.fi>"]
edition = "2021"
description = "Agent API for gate.computer/shell service."
documentation = "https://docs.rs/gain-shell"
homepage = "https://gate.computer"
repository = "https://github.com/gate-computer/gain"
keywords = ["gate", "service"]
categories = ["api-bindings", "asynchronous"]
license = "MIT"

[dependencies]
gain = { version = ">=0.5.0, <1", path = "../gain" }
lazy_static = "1.4.0"
