[package]
name = "gain"
version = "0.4.1"
authors = ["Timo Savola <timo.savola@iki.fi>"]
edition = "2018"
description = "Async/await-based framework for programs targetting Gate runtime (wasm32 targets)."
documentation = "https://docs.rs/gain"
homepage = "https://gate.computer"
repository = "https://github.com/gate-computer/gain"
keywords = ["await", "framework", "gate", "runtime", "webassembly"]
categories = ["api-bindings", "asynchronous", "wasm"]
license = "MIT"

[dependencies]
async-task = "1.3.0"
futures-channel = "0.3.0"
lazy_static = "1.4.0"
